<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_you"
            android:icon="@drawable/profile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/Main"/>
        <item
            android:id="@+id/nav_clean"
            android:icon="@drawable/icon"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_paint"
            android:icon="@drawable/icon"
            android:title="@string/paint"/>
        <item
            android:id="@+id/nav_kitchen"
            android:icon="@drawable/icon"
            android:title="@string/kitchen"/>
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/icon"
            android:title="@string/vehicle"/>
        <item
            android:id="@+id/nav_specific"
            android:icon="@drawable/icon"
            android:title="@string/specific"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon"
            android:title="@string/About" />


    </group>
</menu>