<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.aboutFragment">

    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:layout_width="407dp"
        android:layout_height="736dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- General Information Section -->
        <TextView
            style="@style/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/About"
            android:textColor="@color/purple"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="16dp"
            android:text="@string/company"
            android:textColor="@color/purple"
            android:textSize="16sp" /><!--  Media Links Section -->
        <TextView
            style="@style/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/follow"
            android:textColor="@color/purple"
            android:textStyle="bold" />



            <ImageButton
                android:layout_width="67dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/Facebook"
                android:src="@drawable/what"
                android:background="@android:color/transparent"/>



        <TextView
            style="@style/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/Contact"
            android:textColor="@color/purple"
            android:textStyle="bold" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/emailAddress"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            android:background="@android:color/transparent"/>



        <TextView
            style="@style/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/FAQs"
            android:textColor="@color/purple"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="16dp"
            android:text="@string/qs"
            android:textColor="@color/purple"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>