<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tr"
    tools:context=".ui.setup.SetupFragment">


    <!-- kitchen_cleaning.xml -->

    <Button
        android:id="@+id/buttonKit"
        style="@style/button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/Proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/numberSpinner"
        android:layout_width="118dp"
        android:layout_height="52dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="628dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/kit_size"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="124dp"
        android:text="@string/choose"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="158dp"
            android:layout_height="80dp"
            android:padding="16dp"
            android:text="@string/k_op1"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="158dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:padding="16dp"
            android:shadowColor="@color/orange"

            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="@string/k_op2"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_kitchen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="636dp"
        android:gravity="center"
        android:text="@string/marla"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="371dp"
        android:layout_marginBottom="140dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/task"
            android:textColor="@color/purple"
            android:textSize="24sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkbox_countertops"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/wipe"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_appliances"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/c_app"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <!-- Add more checkboxes for other cleaning tasks -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/addition"
            android:textColor="@color/purple"
            android:textSize="24sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkbox_deep_cleaning"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/appliance"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_organizing"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/organize"
            android:textColor="@color/purple"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>